# Data15Group3

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: glue_catalog.yml  iam_role.yml  iam_role_sfn.yml  lambda_scraper.yml  main.yml  todo
IaC/: todo
IaC/Glue_Catalog/: main.tf  terraform.tfvars  variables.tf
IaC/SFN/: main.tf  terraform.tfvars  variables.tf
Reposted_Issue/: reposted_test.py  reposted_with_different_jobid.csv
archive/: .env.example  README.md
archive/Reposted_Issue/: linkedin_jobs_Data_Engineer_20241209_140037.json  linkedin_jobs_Data_Engineer_20241223_224509.parquet  reposted_with_same_jobid.csv
archive/admin/: createUser.ipynb
archive/job-data-lake-terraform/: main.tf
archive/workflows/: lambda_validitycheck.yml  sfn.yml
crawler/Jasper/: linkedin_info_extraction.py
crawler/Kevin/: lambda_linkedin_jobs.py
crawler/Rowan/: Linkedin_Scraper_Avro.py  Linkedin_Scraper_Lambda.py  async_linkedin_job_scraper.py  async_offset_linkedin_job_scraper.py  config.json  job_desc_crawl_test_one_job.ipynb  job_description_4073313173.txt  linked_info_updated.ipynb  linkedin_config.json  linkedin_jobs.json  linkedin_jobs_Data_Analyst_20241207_174832.json  linkedin_jobs_Software_Engineer_20241207_175417.json  linkedin_jobs_data_engineer_20241207_171533.json
flowchart/proposal-genai/: overview.mmd
job-data-lake-terraform/: glue-table-schema-crawler_demo.tf  variables.tf
job-data-lake-terraform/lambda_function/: localtest.ipynb
scripts/lambda/: todo
src/: main.py
src/components/: chat_interface.py
(+44 files in other folders)
