[tool.poetry]
name = "jobs-ai"
version = "0.1.0"
description = ""
authors = ["Kevin"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
langchain-pinecone = "^0.2.0"
langchain = "^0.3.9"
langchain-community = "^0.3.9"
langchain-openai = "^0.2.11"
langchain-anthropic = "^0.3.0"
python-decouple = "^3.8"
boto3 = "^1.35.76"
pydantic = "^2.10.3"
streamlit = "^1.40.2"
pypdf = "^5.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
